[hash]: Add VS UTs.
Signed-off-by: Nazarii Hnydyn <nazariig@nvidia.com>

--- a/unittest/vslib/Makefile.am
+++ b/unittest/vslib/Makefile.am
@@ -41,6 +41,7 @@ tests_SOURCES = main.cpp \
 				TestSwitchMLNX2700.cpp \
 				TestSwitchBCM56850.cpp \
 				TestSwitchBCM81724.cpp \
+				TestSwitchStateBase.cpp \
 				TestSwitchStateBaseMACsec.cpp \
 				TestMACsecManager.cpp
 
