--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -77,6 +77,7 @@ jobs:
         cd ..
         git clone -b ${{ github.ref_name }} https://github.com/sonic-net/sonic-swss-common
         echo ${{ github.ref_name }}
+        echo ${{ github.ref }}
         pushd sonic-swss-common
         ./autogen.sh
         fakeroot dpkg-buildpackage -us -uc -b
